trying to fix overflow on x

--- a/src/styles/LinkInBio.module.css
+++ b/src/styles/LinkInBio.module.css
@@ -3,7 +3,7 @@ div.LinkInBio {
   display: grid;
   place-items: center;
   height: 100vh;
-  width: 100%;
+  width: 100vw;
   background-color: var(--primary-color);
   color: #ffffff;
   overflow-y: auto;
